compiler-core/src/language_server/tests/snapshots/gleam_core__language_server__tests__action__extract_function_from_statements.snap
---
source: compiler-core/src/language_server/tests/action.rs
expression: "\npub fn do_things(a, b) {\n  let a = 10 + a\n  let b = 10 + b\n  let result = a * b\n  result + 3\n}\n"
---
----- BEFORE ACTION

pub fn do_things(a, b) {
  let a = 10 + a
  ▔▔▔▔▔▔▔▔▔▔▔▔▔▔
  let b = 10 + b
▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔
  let result = a * b
▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔
  result + 3
}


----- AFTER ACTION

pub fn do_things(a, b) {
  function(a, b)
  result + 3
}

fn function(a: Int, b: Int) -> Int {
  let a = 10 + a
  let b = 10 + b
  let result = a * b
}
